# stringtables

./: Cargo.toml  get_stringtables.py
docs/: index.html
src/: main.rs
