[package]
name = "stringtables"
version = "0.1.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
pbo = "0.1"
regex = "1"
serde_cbor = "0.10"
serde = "1.0.97"
serde_derive = "*"
walkdir = "2.2"
